eglibc (2.11.2-3) UNRELEASED; urgency=low

  [ Samuel Thibault ]
  * testsuite-checking/expected-results-i486-gnu-libc: update.
  * patches/hurd-i386/submitted-select.diff: New patch to fix select timeout
    value.

  [ Petr Salinger ]
  * kfreebsd/local-sysdeps.diff: update to revision 3131 (from glibc-bsd).

  [ Clint Adams ]
  * Reflect EGLIBC in binary package short descriptions.  closes: #587586.

  [ Aurelien Jarno ]
  * Always try to restart init when needed, and ignore the possible errors.
    Closes: #588922, 590175.
  * Look for apache2.2-common instead of apache2-common in nsscheck. 
    Closes: #586527.

 -- Aurelien Jarno <aurel32@debian.org>  Fri, 30 Jul 2010 22:18:39 +0200

eglibc (2.11.2-2) unstable; urgency=medium

  [ Aurelien Jarno ]
  * control.in/libc: update the Conflicts on binutils to (<< 2.20.1-1)
    and add a Conflicts on binutils-gold (<< 2.20.1-11). Closes: #585937.
  * Replace patches/alpha/local-longjmp-chk.diff by upstream version
    patches/alpha/cvs-longjmp-chk.diff.
  * Add patches/any/cvs-redirect-throw.diff to fix some header files
    with regard to C++.
  * Add patches/any/cvs-flush-cache-textrels.diff to fix random crashes
    on ARM, if the executable or shared library has TEXTREL.
  * Add patches/any/cvs-__block.diff from upstream to not conflict with
    clang.
  * script.in/nohwcap.sh: consider all packages not in status "n" (not
    installed) and not in status "c" (conf-files) as installed.  Closes:
    bug#586241.

  [ Samuel Thibault ]
  * patches/hurd-i386/local-pthread_posix-option.diff: Avoid letting glibc try
    to install its own headers for libpthread.

  [ Carlos O'Donell]
  * Add patches/hppa/cvs-vfork.diff to fix stack frame creating during
    vfork in multithreaded environments.

 -- Aurelien Jarno <aurel32@debian.org>  Thu, 24 Jun 2010 21:03:55 +0200

eglibc (2.11.2-1) unstable; urgency=low

  * New upstream stable release:
    - Remove debian/patches/amd64/submitted-cpuid.diff (merged).