@@ -2,8 +2,8 @@ Dirty hack to fix installation of locales-all: instead of just locking the
 archive extension (which is not supported on hurd-i386), lock it all.
 
 ---
- locale/programs/locarchive.c |    9 +++++++++
- 1 file changed, 9 insertions(+)
+ locale/programs/locarchive.c |   18 ++++++++++++++++++
+ 1 file changed, 18 insertions(+)
 
 --- a/locale/programs/locarchive.c
 +++ b/locale/programs/locarchive.c
@@ -24,3 +24,20 @@ archive extension (which is not supported on hurd-i386), lock it all.
      {
        int errval = errno;
        unlink (fname);
+@@ -563,7 +572,16 @@ open_archive (struct locarhandle *ah, bool readonly)
+ 	error (EXIT_FAILURE, errno, _("cannot stat locale archive \"%s\""),
+ 	       archivefname);
+ 
++#ifdef __GNU__
++      struct flock fl;
++      fl.l_whence = SEEK_SET;
++      fl.l_start = 0;
++      fl.l_len = 0;
++      fl.l_type = F_WRLCK;
++      if (!readonly && fcntl(fd, F_SETLKW, &fl) == -1)
++#else
+       if (!readonly && lockf64 (fd, F_LOCK, sizeof (struct locarhead)) == -1)
++#endif
+ 	{
+ 	  close (fd);
+ 
