@@ -4,6 +4,8 @@ eglibc (2.11.2-3) UNRELEASED; urgency=low
   * testsuite-checking/expected-results-i486-gnu-libc: update.
   * patches/hurd-i386/submitted-select.diff: New patch to fix select timeout
     value.
+  * patches/hurd-i386/local-locarchive.diff: Extend to permit generating several
+    locales.
 
   [ Petr Salinger ]
   * kfreebsd/local-sysdeps.diff: update to revision 3131 (from glibc-bsd).
